crates/mun_compiler/src/snapshots/mun_compiler__annotate__tests__annotation_builder_snapshot.snap
---
source: crates/mun_compiler/src/annotate.rs
expression: "AnnotationBuilder::new(AnnotationType::Note).id(\"1\").label(\"test annotation\").build()"
---
Annotation {
    id: Some(
        "1",
    ),
    label: Some(
        "test annotation",
    ),
    annotation_type: Note,
}
