crates/mun_compiler/src/snapshots/mun_compiler__annotate__tests__slice_builder_snapshot.snap
---
source: crates/mun_compiler/src/annotate.rs
expression: "SliceBuilder::new(true).origin(\"/tmp/usr/test.mun\").source_annotation((13,\n                                                                       19),\n                                                                      \"test source annotation\",\n                                                                      AnnotationType::Note).build(source_code,\n                                                                                                  &line_index)"
---
Slice {
    source: "fn foo()->f64{\n48\n}",
    line_start: 1,
    origin: Some(
        "/tmp/usr/test.mun",
    ),
    annotations: [
        SourceAnnotation {
            range: (
                13,
                21,
            ),
            label: "test source annotation",
            annotation_type: Note,
        },
    ],
    fold: true,
}
