crates/mun_compiler/src/snapshots/mun_compiler__annotate__tests__snippet_builder_snapshot.snap
---
source: crates/mun_compiler/src/annotate.rs
expression: "SnippetBuilder::new().title(AnnotationBuilder::new(AnnotationType::Note).id(\"1\").label(\"test annotation\").build()).footer(AnnotationBuilder::new(AnnotationType::Warning).id(\"2\").label(\"test annotation\").build()).slice(SliceBuilder::new(true).origin(\"/tmp/usr/test.mun\").source_annotation((14,\n                                                                                                                                                                                                                                                                                                 20),\n                                                                                                                                                                                                                                                                                                \"test source annotation\",\n                                                                                                                                                                                                                                                                                                AnnotationType::Note).source_annotation((35,\n                                                                                                                                                                                                                                                                                                                                         41),\n                                                                                                                                                                                                                                                                                                                                        \"test source annotation\",\n                                                                                                                                                                                                                                                                                                                                        AnnotationType::Error).build(source_code,\n                                                                                                                                                                                                                                                                                                                                                                     &line_index)).build()"
---
Snippet {
    title: Some(
        Annotation {
            id: Some(
                "1",
            ),
            label: Some(
                "test annotation",
            ),
            annotation_type: Note,
        },
    ),
    footer: [
        Annotation {
            id: Some(
                "2",
            ),
            label: Some(
                "test annotation",
            ),
            annotation_type: Warning,
        },
    ],
    slices: [
        Slice {
            source: "fn foo():float{\n48\n}\n\nfn bar():bool{\n23\n}",
            line_start: 1,
            origin: Some(
                "/tmp/usr/test.mun",
            ),
            annotations: [
                SourceAnnotation {
                    range: (
                        14,
                        22,
                    ),
                    label: "test source annotation",
                    annotation_type: Note,
                },
                SourceAnnotation {
                    range: (
                        39,
                        47,
                    ),
                    label: "test source annotation",
                    annotation_type: Error,
                },
            ],
            fold: true,
        },
    ],
}
